[package]
name = "which-allowed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iam_service"
path = "src/iam-service-lib.rs"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-iam = "1.34.0"
clap = { version = "4.5.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
